# Cypher

./: .gitignore  README.md  pyproject.toml
cypher/: __init__.py  __main__.py  components.py  editor.py  example.py
cypher/languages/: json_syntax.py  python_syntax.py
cypher/resources/: Combinear.qss  darkorange.css
