[build-system]
requires = ["setuptools", "setuptools-scm"]

[tool.setuptools]
packages = ["cypher"]

[project]
name = "cypher"
authors = [
    {name = "Nathan Maxwell"}
]
description = "A Qt Python script editor, styled in Unreal stylesheet"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["unreal", "scripter"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
dependencies = ['importlib-metadata; python_version<"3.9"', "PySide2"]
version = "0.0.1"

[project.urls]
Homepage = "https://github.com/nate-maxwell/Cypher"
Source = "https://github.com/nate-maxwell/Cypher"